# policritique

./: .gitignore  README.md
backend/: .env.template  README.md  pyproject.toml
backend/src/policritique/: __init__.py  cli.py  console.py  settings.py
backend/src/policritique/api/: app.py  main.py  queries.py  schemas.py
backend/src/policritique/api/routers/: constituencies.py  elections.py  manifestos.py  members.py  parties.py
backend/src/policritique/auth/: deps.py  manager.py  models.py  schemas.py
backend/src/policritique/collectors/: elections.py  manifestos.py  members.py
backend/src/policritique/db/: engine.py  models.py  repository.py  session.py  store.py
backend/src/policritique/manifesto/: party_pdfs.py  project.py
backend/src/policritique/parliament/: __init__.py  members_api.py  mnis.py  psephology.py
backend/tests/: test_api_app.py  test_collect_elections.py  test_collect_manifestos.py  test_collect_members.py  test_db_init.py  test_manifesto_project.py  test_members_api.py  test_mnis.py  test_psephology.py  test_settings.py
frontend/: README.md  index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  auth-storage.ts  types.ts
frontend/src/pages/: ConstituenciesPage.tsx  ElectionsPage.tsx  HomePage.tsx  LoginPage.tsx  ManifestoDetailPage.tsx  ManifestosPage.tsx  MemberDetailPage.tsx  MembersPage.tsx  PartiesPage.tsx  RegisterPage.tsx
scripts/db/: schema.sql
